Troubleshooting layout issues.

--- a/MyMoshify/css/style.css
+++ b/MyMoshify/css/style.css
@@ -180,7 +180,7 @@ a {
   outline: 0;
   text-align: center;
   text-transform: uppercase;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   white-space: nowrap;
 }
 .btn .icon {
@@ -254,6 +254,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 .input-group .btn {
   margin: 4px;
@@ -631,8 +632,9 @@ a {
   max-width: 670px;
 }
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
